--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -23,9 +23,9 @@
 \usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
-\title{Simulate Desert Ant Behaviour}
+\title{Desert Ant Behaviour: Modelling desert ants with a focus on movement and navigation}
 \author{Georg Wiedebach, Wolf Vollprecht}
-\date{date} 
+\date{\today} 
 
 \begin{document}
 
@@ -82,9 +82,10 @@
 % IMPORTANT
 % you MUST include the ETH declaration of originality here; it is available for download on the course website or at http://www.ethz.ch/faculty/exams/plagiarism/index_EN; it can be printed as pdf and should be filled out in handwriting
 
-\section*{\centerline{Abstract}}
+\begin{abstract}
 This paper is the final result of the course {\sc Modeling Social Systems with MATLAB} which aimed to offer an insight into the MATLAB programming language and to use said language to model social systems with various different approaches. The timeframe of the course is one semester. \\
-In this paper we will try to show how to replicate the behaviourr of desert ants in a MATLAB simulation. Furthermore we will discuss our results and compare them to experimental results obtained by biologists.
+In this paper we will try to show how to replicate the behaviour of desert ants in a MATLAB simulation. Furthermore we will discuss our results and compare them to experimental results obtained by biologists.
+\end{abstract}
 
 \newpage
 
