--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -9,7 +9,7 @@
 \usepackage{amssymb, amsmath}
 \usepackage{hyperref}
 \usepackage{pdfpages}
-\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
+\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode/mcode}
 
 \hypersetup{
     colorlinks,%
@@ -20,7 +20,6 @@
 }
 
 \usepackage{booktabs}
-\usepackage[framed,numbered,autolinebreaks,useliterate]{mcode}
 \DeclareGraphicsRule{.tif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .tif`.png}
 
 \title{Desert Ant Behaviour: Modelling desert ants with a focus on movement and navigation}
