final version updates

--- a/documentation/cover.tex
+++ b/documentation/cover.tex
@@ -34,9 +34,8 @@
 \begin{tabular}{|c|}
 \hline
 \\
-\textbf{\LARGE{ Desert Ant Behaviour }}\\
-\textbf{\LARGE{ Modelling desert ants with }}\\
-\textbf{\LARGE{ a focus on movement and navigation }}\\
+\textbf{\LARGE{ Desert Ant Behaviour: }}\\
+\textbf{\LARGE{ Simulating Movement and Navigation }}\\
 \\
 \hline
 \end{tabular}
