--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -82,8 +82,8 @@
 % you MUST include the ETH declaration of originality here; it is available for download on the course website or at http://www.ethz.ch/faculty/exams/plagiarism/index_EN; it can be printed as pdf and should be filled out in handwriting
 
 \begin{abstract}
-This paper is the final result of the course {\sc Modeling Social Systems with MATLAB\texttrademark} which aimed to offer an insight into the MATLAB\texttrademark programming language and to use said language to model social systems with various approaches. The timeframe of the course is one semester. \\
-In this paper we will try to show how to replicate the behaviour of desert ants in a MATLAB\texttrademark simulation. Furthermore we will discuss our results and compare them to experimental results obtained by biologists.
+This paper is the final result of the course {\sc Modeling Social Systems with MATLAB\texttrademark} which aimed to offer an insight into the MATLAB\texttrademark\ programming language and to use said language to model social systems with various approaches. The timeframe of the course is one semester. \\
+In this paper we will try to show how to replicate the behaviour of desert ants in a MATLAB\texttrademark\ simulation. Furthermore we will discuss our results and compare them to experimental results obtained by biologists.
 \end{abstract}
 
 \newpage
@@ -115,7 +115,7 @@ Results of interest are:
 \begin{itemize}
 \item How optimized and efficent is navigation by vectors
 \item How well do the ants learn in the course of repeated journey towards the food and back
-\item Of course we were as well motivated to improve our knowledge of MATLAB\texttrademark
+\item Of course we were as well motivated to improve our knowledge of MATLAB\texttrademark\
 \end{itemize}
 
 
@@ -177,7 +177,7 @@ We implemented different methods of loading landscapes into our simulation. Besi
 \centering
 \begin{tabular}{lll}
    \cmidrule[1pt]{2-3}
-   & Color in png-file & Color in MATLAB\texttrademark \\
+   & Color in png-file & Color in MATLAB\texttrademark\ \\
    \midrule
 Obstacle & black & red \\ \midrule
 Nest & green & black circle \\ \midrule
