--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -410,7 +410,7 @@ The evolution may have taught ants a lot of useful tricks and methods to survive
 \newpage
 \section{References}
 
-\bibliographystyle{plain}
+\bibliographystyle{ama}
 \bibliography{references}
 
 \listoffigures
