--- a/documentation/references.bib
+++ b/documentation/references.bib
@@ -1,14 +1,13 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.7.2.
 % Encoding: Cp1252
 
 @ARTICLE{wiki1,
   author = {Wikipedia contributors},
   title = {Graph theory:
 	
-	(http://en.wikipedia.org/w/index.php?title=Graph\_theory\&oldid=465959034)},
+	\url{http://en.wikipedia.org/w/index.php?title=Graph\_theory\&oldid=465959034}},
   journal = {Wikipedia, The Free Encyclopedia.},
   year = {15.12.2011},
-  timestamp = {2011.12.14},
   url = {http://en.wikipedia.org/w/index.php?title=Graph\_theory&oldid=465959034}
 }
 
@@ -16,10 +15,9 @@
   author = {Wikipedia contributors},
   title = {Ant colony optimization algorithms:
 	
-	(http://en.wikipedia.org/w/index.php?title=Ant\_colony\_optimization\_algorithms\&oldid=459281208)},
+	\url{http://en.wikipedia.org/w/index.php?title=Ant\_colony\_optimization\_algorithms\&oldid=459281208}},
   journal = {Wikipedia, The Free Encyclopedia.},
   year = {06.11.2011},
-  timestamp = {2011.12.14},
   url = {http://en.wikipedia.org/w/index.php?title=Ant\_colony\_optimization\_algorithms&oldid=459281208}
 }
 
@@ -27,10 +25,9 @@
   author = {Martina Bisculm},
   title = {Warum Menschen immer im Kreis laufen:
 	
-	(http://wissenschaft.de/wissenschaft/news/306514.html)},
+	\url{http://wissenschaft.de/wissenschaft/news/306514.html}},
   journal = {ddp/wissenschaft.de},
   year = {21.08.2009},
-  timestamp = {2011.12.15},
   url = {http://wissenschaft.de/wissenschaft/news/306514.html}
 }
 
@@ -43,11 +40,12 @@
 
 @ARTICLE{soms,
   author = {K. Donnay and S. Balietti},
-  title = {www.soms.ethz.ch/teaching/MatlabFall11
+  title = {Lecture with Computer Exercises: Modelling and Simulating Social
+	Systems with MATLAB
 	
-	Lecture 5 -- Agent-based Modeling / Game Theory},
+	\url{http://www.soms.ethz.ch/teaching/MatlabFall11} (Password protected)},
   year = {15.12.2011},
-  timestamp = {2011.12.15}
+  url = {http://www.soms.ethz.ch/teaching/MatlabFall11}
 }
 
 @ARTICLE{wehner88,
@@ -55,6 +53,12 @@
   title = {Path integration in desert ants, Cataglyphis fortis},
   journal = {Proc. Nati. Acad. Sci. USA},
   year = {1988}
+}
+
+@ARTICLE{pic1,
+  author = {Picturesource},
+  title = {Google pictures},
+  year = {15.12.2011}
 }
 
 @ARTICLE{wehner03,
