--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -228,7 +228,7 @@ The move method is the heart of the ant class: it accepts any general direction 
 \begin{figure}
 \centering
 \includegraphics[width=6cm]{images/Mooreneighbours.pdf}
-\caption[First order moore neighbours]{First order Moore neighbours\cite{soms,pic1}}
+\caption[First order moore neighbours]{First order Moore neighbours\cite{soms}}
 \label{moore}
 \end{figure}
 
@@ -414,7 +414,6 @@ The evolution may have taught ants a lot of useful tricks and methods to survive
 \bibliographystyle{plain}
 \bibliography{references}
 
-\newpage
 \listoffigures
 
 
